deploy/local-minikube-virtualbox/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: default
spec:
  selector:
    app: django
  type: ClusterIP
  ports:
  - name: django
    port: 80
